--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,10 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+.egg-info
+.idea
 MANIFEST
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
