--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         python-version: [3.5, 3.7, 3.8, 3.9]
         os-environment: [ubuntu-20.04, windows-2019, macos-10.15]
-    runs-on: ${{ matrix.os-env }}
+    runs-on: ${{ matrix.os-environment }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
