--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.5, 3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]
         os-environment: [ubuntu-20.04, windows-2019, macos-10.15]
     runs-on: ${{ matrix.os-environment }}
     steps:
