--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,11 +47,10 @@ jobs:
       run: |
         python -m build
     - name: Upload package
-      shell: bash
-      env:
-        UPLOAD_PASS: ${{ secrets.PIP_UPLOAD_DEVANA }}
-      run: |
-        python -m twine upload dist/*  -u __token__ -c $UPLOAD_PASS
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PIP_UPLOAD_DEVANA }}
     - name: Build documentation
       shell: bash
       run: |
