--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,5 @@ jobs:
         git config --global user.name 'JhnW'
         git config --global user.email 'jhnw@users.noreply.github.com'
         git add docs/.
-        git checkout main
         git commit -am "chg: doc: Automated doc generated."
-        git push origin main
+        git push origin HEAD:main
