new: Pointer order basic API for nested pointers.
Nested pointer parsing only for basic cases, without parsing nested type modification.

--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,4 @@ isolated_build = True
 
 [testenv]
 deps = -rrequirements.txt
-commands = python -m unittest discover -v -s tests/parser/unit
+commands = python -m unittest discover -v -s tests
