--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,3 +27,38 @@ jobs:
     - name: run tets
       run: |
         python -m tox -e py
+  build_doc:
+    needs: tests 
+    strategy:
+      fail-fast: true
+      matrix:
+        python-version: [3.8]
+        os-environment: [ubuntu-20.04]
+    runs-on: ${{ matrix.os-environment }}
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements.txt
+    - name: Build package
+      run: |
+        python -m build
+    - name: Build documentation
+      shell: bash
+      run: |
+        python build_local.py
+        rm -d -r docs
+        python build_doc.py
+    - name: Upload documentation
+      shell: bash
+      run: |
+        git config --global user.name 'JhnW'
+        git config --global user.email 'jhnw@users.noreply.github.com'
+        git add docs/.
+        git commit -am "chg: doc: Automated doc generated."
+        git push origin HEAD:main
