--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,10 @@ jobs:
         os-environment: [ubuntu-20.04]
     runs-on: ${{ matrix.os-environment }}
     steps:
-    - uses: actions/checkout@v2
+    - name: Full checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -59,6 +62,6 @@ jobs:
       run: |
         git config --global user.name 'JhnW'
         git config --global user.email 'jhnw@users.noreply.github.com'
-        git add docs/.
+        git add docs/changelog_list.html
         git commit -am "chg: doc: Automated doc generated."
         git push origin HEAD:main
