fix: doc: Change log will not print automated doc gen.

--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -66,6 +66,7 @@ ignore_regexps = [
     r'^([cC]hg|[fF]ix|[nN]ew)\s*:\s*[d|D]ev:',
     r'^(.{3,3}\s*:)?\s*[fF]irst commit.?\s*$',
     r'^$',  ## ignore commits with empty messages
+    r'Automated doc generated',
 ]
 
 
