new: Core of code generation functionality.
A lot of minor changes, fixes in parsing module, possibility of multiple pointers type modification (finally!) and writing code generator.
Delivered framework for printing syntax abstraction elements along with the default implementation of printing all items.
The Python code representation has been improved to allow manual code changes (setters are fixed) and always correctly create new class instances without source files. 
Lexicon still need to be updated manually in no-parsing code case.

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ project_urls =
     Bug Tracker = https://github.com/JhnW/devana/issues
     Documentation = http://jhnw.github.io/devana
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Topic :: Software Development :: Code Generators
     Topic :: Software Development :: Build Tools
