--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-libclang==12.0.0
-pytest==6.2.4
-tox==3.23.1
-Sphinx==4.0.2
-sphinx-rtd-theme==0.5.2
-coverage==5.5
-setuptools==57.0.0
-build==0.4.0
-twine==3.4.1
-sphinx-autodoc-typehints==1.12.0
+libclang==14.0.1
+pytest==7.1.2
+tox==3.25.1
+Sphinx==5.0.2
+sphinx-rtd-theme==1.0.0
+coverage==6.4.2
+setuptools==63.2.0
+build==0.8.0
+twine==4.0.1
+sphinx-autodoc-typehints==1.18.3
 gitchangelog==3.0.4
-setuptools>=42
-wheel
-keyring==23.0.1
+wheel>=0.36.2
+keyring==23.7.0
