--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ project_urls =
     Bug Tracker = https://github.com/JhnW/devana/issues
     Documentation = http://jhnw.github.io/devana
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 4 - Beta
     Intended Audience :: Developers
     Topic :: Software Development :: Code Generators
     Topic :: Software Development :: Build Tools
@@ -22,6 +22,7 @@ classifiers =
     Operating System :: MacOS
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
 keywords =
     C++
