--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  tests:
+  quality:
     strategy:
       fail-fast: false
       matrix:
@@ -26,4 +26,5 @@ jobs:
         python -m pip install -r requirements.txt
     - name: run pylint
       run: |
+        cd ./src/devana
         pylint --recursive=y  ./src/devana
