--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -27,4 +27,4 @@ jobs:
     - name: run pylint
       run: |
         cd ./src/devana
-        pylint --recursive=y  ./src/devana
+        pylint --recursive=y  .
