--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.8]
         os-environment: [ubuntu-20.04, windows-2019, macos-11]
     runs-on: ${{ matrix.os-environment }}
     steps:
