--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
 keywords =
     C++
@@ -36,7 +37,7 @@ license = LGPLv2+
 [options]
 python_requires = >=3.8
 install_requires =
-    libclang==15.0.6.1
+    libclang==16.0.6
 packages =find:
 package_dir =
     =src
