--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8]
-        os-environment: [ubuntu-20.04, windows-2019, macos-14]
+        os-environment: [ubuntu-20.04, windows-2019] # enable macos-14: https://github.com/sighingnow/libclang/issues/71
     runs-on: ${{ matrix.os-environment }}
     steps:
       - uses: actions/checkout@v4
