fix: failing tests + pylint warnings

--- a/.pylintrc
+++ b/.pylintrc
@@ -440,7 +440,8 @@ disable=raw-checker-failed,
         consider-using-dict-items,
         no-else-break,
         wildcard-import,
-        unused-wildcard-import
+        unused-wildcard-import,
+        too-many-positional-arguments
 
 
 
