feat: add template and concept support for using

--- a/.pylintrc
+++ b/.pylintrc
@@ -440,8 +440,7 @@ disable=raw-checker-failed,
         consider-using-dict-items,
         no-else-break,
         wildcard-import,
-        unused-wildcard-import,
-        too-many-positional-arguments
+        unused-wildcard-import
 
 
 
