fix: pkg: Fix CI/CD code quality

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -27,5 +27,6 @@ jobs:
         python -m pip install -r requirements.txt
     - name: run pylint
       run: |
+        pip install -e .
         cd ./src/devana
         pylint --recursive=y  .
